+ UI improvement + building Skills and User classes

--- a/skillCommunity/Views/MainPage.xaml
+++ b/skillCommunity/Views/MainPage.xaml
@@ -8,7 +8,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:SkillsGroupPage />
             </x:Arguments>
         </NavigationPage>
         <NavigationPage Title="About">
