--- a/skillCommunity/CustomItems/CoursesV2ViewCell.xaml
+++ b/skillCommunity/CustomItems/CoursesV2ViewCell.xaml
@@ -1,21 +1,55 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ViewCell xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="skillCommunity.CustomItems.CoursesV2ViewCell">
-    <Grid x:Name="grdCommunity" RowSpacing="0" ColumnSpacing="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-    <Grid.RowDefinitions>
-        <RowDefinition Height="90" />
-        <RowDefinition Height="50" />
-        <RowDefinition Height="60" />
+<ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
+          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+          x:Class="skillCommunity.CustomItems.CoursesV2ViewCell">
 
-    </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions> 
-        
-        <Image Aspect="AspectFill" Source="background.jpeg"  Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="1"/>
-        <StackLayout BackgroundColor="White" Opacity="0.5" Grid.Row="1" Grid.RowSpan="2" />
-        <Label Text="Cours de piano" Opacity="1" TextColor="Black" Grid.Row="1" Grid.RowSpan="2" FontSize="28" HorizontalOptions="CenterAndExpand" VerticalTextAlignment="Start" Margin="0,10,0,0" />
-        <StackLayout Grid.Row="2" Grid.RowSpan="1" VerticalOptions="FillAndExpand">
-            <Label Text="Top cours de piano pour débutant et intermédiaire cejofijsoij qidjqkd poqkdpopdqoqkpdok" FontSize="Micro" TextColor="Black" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+    <Grid x:Name="grdCommunity"
+          RowSpacing="0"
+          ColumnSpacing="0"
+          VerticalOptions="FillAndExpand"
+          Padding="5"
+          HorizontalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="110" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="60" />
+            <RowDefinition Height="1" />
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Image Aspect="AspectFill"
+               Source="{Binding ImageUrl}"
+               Grid.Row="0"
+               Grid.RowSpan="2"
+               Grid.Column="0"
+               Grid.ColumnSpan="1" />
+        <StackLayout BackgroundColor="White"
+                     Opacity="0.5"
+                     Grid.Row="1"
+                     Grid.RowSpan="2" />
+        <Label Text="{Binding Label}"
+               Opacity="1"
+               TextColor="Black"
+               Grid.Row="1"
+               Grid.RowSpan="2"
+               FontSize="28"
+               HorizontalOptions="CenterAndExpand"
+               VerticalTextAlignment="Start"
+               Margin="0,10,0,0" />
+        <StackLayout Grid.Row="2"
+                     Grid.RowSpan="1"
+                     VerticalOptions="FillAndExpand">
+            <Label Text="{Binding Description}"
+                   FontSize="Subtitle"
+                   TextColor="Black"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center" />
         </StackLayout>
+        <BoxView BackgroundColor="Gray"
+                 Grid.Row="3"
+                 Grid.ColumnSpan="1" />
     </Grid>
 </ViewCell>
